--- a/driver.htm
+++ b/driver.htm
@@ -258,25 +258,25 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_cpp_timer_io.htm">
     Use I/O Timer</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/cpp_timer-dpc.htm">
-        DPC</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_cpp_timer_dpc.htm">
+    Use DPC Timer</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/wdm/cpp_startio.htm">
-    StartIO</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_cpp_startio.htm">
+    Handle StartIo IRP</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/wdm/cpp_queue_irp.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_cpp_queue_irp.htm">
     Queue IRP</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/wdm/cpp_cancel_irp.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_cpp_cancel_irp.htm">
     Cancel IRP</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/wdm/cpp_csq.htm">
-    Cancel-Safe IRP Queue(CSQ)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_cpp_csq.htm">
+    Use Cancel-Safe IRP Queue(CSQ)</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&oplus;
     Synchronization<br>
