--- a/driver/wdm_cpp_cancel_irp.htm
+++ b/driver/wdm_cpp_cancel_irp.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../driver.htm">驅動程式</a> - Windows Driver Model (WDM) - 使用範例 - C/C++ (DDK) - <b>Use I/O Timer</b></h3>
+<h3><a href="../driver.htm">驅動程式</a> - Windows Driver Model (WDM) - 使用範例 - C/C++ (DDK) - <b>Cancel IRP</b></h3>
 <hr size="1"><br>
 <p>
 參考資訊：<br>
@@ -15,19 +15,43 @@ main.c
 <pre class="brush:cpp">
 #include &lt;wdm.h&gt;
  
-#define IOCTL_START CTL_CODE(FILE_DEVICE_UNKNOWN, 0x800, METHOD_BUFFERED, FILE_ANY_ACCESS)
-#define IOCTL_STOP  CTL_CODE(FILE_DEVICE_UNKNOWN, 0x801, METHOD_BUFFERED, FILE_ANY_ACCESS)
+#define IOCTL_QUEUE     CTL_CODE(FILE_DEVICE_UNKNOWN, 0x800, METHOD_BUFFERED, FILE_ANY_ACCESS)
+#define IOCTL_PROCESS   CTL_CODE(FILE_DEVICE_UNKNOWN, 0x801, METHOD_BUFFERED, FILE_ANY_ACCESS)
  
-#define DEV_NAME L"\\Device\\MyDriver"
-#define SYM_NAME L"\\DosDevices\\MyDriver"
+#define DEV_NAME    L"\\Device\\MyDriver"
+#define SYM_NAME    L"\\DosDevices\\MyDriver"
  
-ULONG dwTimerCnt = 0;
+KDPC stDPC = { 0 };
+KTIMER stTime = { 0 };
+LIST_ENTRY stQueue = { 0 };
 PDEVICE_OBJECT pNextDevice = NULL;
  
-VOID OnTimer(PDEVICE_OBJECT pMyDevice, PVOID pContext)
+VOID OnTimer(struct _KDPC *Dpc, PVOID pContext, PVOID pArg1, PVOID pArg2)
 {
-    dwTimerCnt += 1;
-    DbgPrint("IoTimer: %d", dwTimerCnt);
+    PIRP pIrp = NULL;
+    PLIST_ENTRY plist = NULL;
+
+    if (IsListEmpty(&amp;stQueue) == TRUE) {
+        KeCancelTimer(&amp;stTime);
+        DbgPrint("Finish");
+    }
+    else {
+        plist = RemoveHeadList(&amp;stQueue);
+        pIrp = CONTAINING_RECORD(plist, IRP, Tail.Overlay.ListEntry);
+        if (pIrp-&gt;Cancel != TRUE) {
+            pIrp-&gt;IoStatus.Status = STATUS_SUCCESS;
+            pIrp-&gt;IoStatus.Information = 0;
+            IoCompleteRequest(pIrp, IO_NO_INCREMENT);
+            DbgPrint("Complete Irp");
+        }
+        else {
+            pIrp-&gt;CancelRoutine = NULL;
+            pIrp-&gt;IoStatus.Status = STATUS_CANCELLED;
+            pIrp-&gt;IoStatus.Information = 0;
+            IoCompleteRequest(pIrp, IO_NO_INCREMENT);
+            DbgPrint("Cancel Irp");
+        }
+    }
 }
  
 NTSTATUS AddDevice(PDRIVER_OBJECT pMyDriver, PDEVICE_OBJECT pPhyDevice)
@@ -44,7 +68,9 @@ NTSTATUS AddDevice(PDRIVER_OBJECT pMyDriver, PDEVICE_OBJECT pPhyDevice)
     pMyDevice-&gt;Flags &amp;= ~DO_DEVICE_INITIALIZING;
     pMyDevice-&gt;Flags |= DO_BUFFERED_IO;
      
-    IoInitializeTimer(pMyDevice, OnTimer, NULL);
+    InitializeListHead(&amp;stQueue);
+    KeInitializeTimer(&amp;stTime);
+    KeInitializeDpc(&amp;stDPC, OnTimer, pMyDevice);
     return STATUS_SUCCESS;
 }
  
@@ -72,19 +98,20 @@ NTSTATUS IrpPnp(PDEVICE_OBJECT pMyDevice, PIRP pIrp)
  
 NTSTATUS IrpIOCTL(PDEVICE_OBJECT pMyDevice, PIRP pIrp)
 {
-    HANDLE hThread = NULL;
-    NTSTATUS status = STATUS_SUCCESS;
+    LARGE_INTEGER stTimePeriod = { 0 };
     PIO_STACK_LOCATION pStack = IoGetCurrentIrpStackLocation(pIrp);
  
     switch (pStack-&gt;Parameters.DeviceIoControl.IoControlCode) {
-    case IOCTL_START:
-        DbgPrint("IOCTL_START");
-        dwTimerCnt = 0;
-        IoStartTimer(pMyDevice);
-        break;
-    case IOCTL_STOP:
-        DbgPrint("IOCTL_STOP");
-        IoStopTimer(pMyDevice);
+    case IOCTL_QUEUE:
+        DbgPrint("IOCTL_QUEUE");
+        InsertHeadList(&amp;stQueue, &amp;pIrp-&gt;Tail.Overlay.ListEntry);
+        IoMarkIrpPending(pIrp);
+        return STATUS_PENDING;
+    case IOCTL_PROCESS:
+        DbgPrint("IOCTL_PROCESS");
+        stTimePeriod.HighPart |= -1;
+        stTimePeriod.LowPart = -10000000;
+        KeSetTimerEx(&amp;stTime, stTimePeriod, 1000, &amp;stDPC);
         break;
     }
     pIrp-&gt;IoStatus.Information = 0;
@@ -129,18 +156,35 @@ app.c</b>
 #include &lt;stdio.h&gt;
 #include &lt;stdlib.h&gt;
  
-#define IOCTL_START CTL_CODE(FILE_DEVICE_UNKNOWN, 0x800, METHOD_BUFFERED, FILE_ANY_ACCESS)
-#define IOCTL_STOP  CTL_CODE(FILE_DEVICE_UNKNOWN, 0x801, METHOD_BUFFERED, FILE_ANY_ACCESS)
+#define IOCTL_QUEUE     CTL_CODE(FILE_DEVICE_UNKNOWN, 0x800, METHOD_BUFFERED, FILE_ANY_ACCESS)
+#define IOCTL_PROCESS   CTL_CODE(FILE_DEVICE_UNKNOWN, 0x801, METHOD_BUFFERED, FILE_ANY_ACCESS)
  
 int main(int argc, char **argv)
 {
+    int i = 0;
     DWORD dwRet = 0;
     HANDLE hFile = NULL;
+    OVERLAPPED ov[3] = { 0 };
  
-    hFile = CreateFile("\\\\.\\MyDriver", GENERIC_READ | GENERIC_WRITE, 0, NULL, OPEN_EXISTING, 0, NULL);
-    DeviceIoControl(hFile, IOCTL_START, NULL, 0, NULL, 0, &amp;dwRet, NULL);
-    Sleep(3000);
-    DeviceIoControl(hFile, IOCTL_STOP, NULL, 0, NULL, 0, &amp;dwRet, NULL);
+    hFile = CreateFile("\\\\.\\MyDriver", GENERIC_READ | GENERIC_WRITE, 0, NULL, OPEN_EXISTING, FILE_FLAG_OVERLAPPED | FILE_ATTRIBUTE_NORMAL, NULL);
+
+    for (i = 0; i &lt; 3; i++) {
+        memset(&amp;ov[i], 0, sizeof(ov[i]));
+        ov[i].hEvent = CreateEvent(NULL, TRUE, FALSE, NULL);
+        DeviceIoControl(hFile, IOCTL_QUEUE, NULL, 0, NULL, 0, &amp;dwRet, &amp;ov[i]);
+        printf("Queued Event\n");
+    }
+
+    printf("Processing All Events\n");
+    DeviceIoControl(hFile, IOCTL_PROCESS, NULL, 0, NULL, 0, &amp;dwRet, NULL);
+    Sleep(1000);
+    CancelIo(hFile);
+
+    for (i = 0; i &lt; 3; i++) {
+        WaitForSingleObject(ov[i].hEvent, INFINITE);
+        CloseHandle(ov[i].hEvent);
+        printf("Complete\n");
+    }
     CloseHandle(hFile);
     return 0;
 }
@@ -148,8 +192,8 @@ int main(int argc, char **argv)
 
 <p>
 完成<br>
-<img src="wdm_asm_timer_io/1.jpg" class="maxSize"><br>
-<img src="wdm_asm_timer_io/2.jpg" class="maxSize">
+<img src="wdm_asm_cancel_irp/1.jpg" class="maxSize"><br>
+<img src="wdm_asm_cancel_irp/2.jpg" class="maxSize">
 </p>
 
 <br><script type="text/javascript" src="../tail.js"></script>
