--- a/driver.htm
+++ b/driver.htm
@@ -278,24 +278,21 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_cpp_csq.htm">
     Use Cancel-Safe IRP Queue(CSQ)</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    Synchronization<br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_cpp_spinlock.htm">
+    Use Spin Lock</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/cpp_spinlock.htm">
-        Spin Lock</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_cpp_event.htm">
+    Use Event</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/cpp_event.htm">
-        Event</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_cpp_mutex.htm">
+    Use Mutex</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/cpp_mutex.htm">
-        Mutex</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/cpp_semaphore.htm">
-        Semaphore</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_cpp_semaphore.htm">
+    Use Semaphore</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="driver/wdm/cpp_dpc.htm">
