--- a/driver/wdm_adddevice.htm
+++ b/driver/wdm_adddevice.htm
@@ -28,9 +28,9 @@ PDEVICE_OBJECT gNextDevice = NULL;
 
 NTSTATUS AddDevice(PDRIVER_OBJECT pMyDriver, PDEVICE_OBJECT pPhyDevice)
 {
-    PDEVICE_OBJECT pMyDevice;
-    UNICODE_STRING usSymbolName;
-    UNICODE_STRING usDeviceName;
+    PDEVICE_OBJECT pMyDevice = NULL;
+    UNICODE_STRING usSymbolName = { 0 };
+    UNICODE_STRING usDeviceName = { 0 };
 
     // Step 1
     RtlInitUnicodeString(&amp;usDeviceName, L"\\Device\\MyDriver");
