--- a/driver/wdm_driverentry.htm
+++ b/driver/wdm_driverentry.htm
@@ -36,15 +36,15 @@ Windows系統透過呼叫DriverEntry()載入驅動程式並傳入兩個參數，
 </p>
 
 <pre class="brush:cpp">
-NTSTATUS DriverEntry(PDRIVER_OBJECT pOurDriver, PUNICODE_STRING pOurRegistry)
+NTSTATUS DriverEntry(PDRIVER_OBJECT pMyDriver, PUNICODE_STRING pMyRegistry)
 {
-    pOurDriver-&gt;MajorFunction[IRP_MJ_PNP]     = IrpPnp;
-    pOurDriver-&gt;MajorFunction[IRP_MJ_CREATE]  = IrpCreate;
-    pOurDriver-&gt;MajorFunction[IRP_MJ_CLOSE]   = IrpClose;
-    pOurDriver-&gt;MajorFunction[IRP_MJ_READ]    = IrpRead;
-    pOurDriver-&gt;MajorFunction[IRP_MJ_WRITE]   = IrpWrite;
-    pOurDriver-&gt;DriverUnload                  = DriverUnload;
-    pOurDriver-&gt;DriverExtension-&gt;AddDevice = AddDevice;
+    pMyDriver-&gt;MajorFunction[IRP_MJ_PNP]     = IrpPnp;
+    pMyDriver-&gt;MajorFunction[IRP_MJ_CREATE]  = IrpCreate;
+    pMyDriver-&gt;MajorFunction[IRP_MJ_CLOSE]   = IrpClose;
+    pMyDriver-&gt;MajorFunction[IRP_MJ_READ]    = IrpRead;
+    pMyDriver-&gt;MajorFunction[IRP_MJ_WRITE]   = IrpWrite;
+    pMyDriver-&gt;DriverUnload                  = DriverUnload;
+    pMyDriver-&gt;DriverExtension-&gt;AddDevice = AddDevice;
 
     return STATUS_SUCCESS;
 }
