--- a/driver.htm
+++ b/driver.htm
@@ -294,21 +294,21 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_cpp_semaphore.htm">
     Use Semaphore</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/wdm/cpp_dpc.htm">
-    Deferred Procedure Call(DPC)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_cpp_dpc.htm">
+    Use Deferred Procedure Call(DPC)</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/wdm/cpp_apc.htm">
-    Asynchronous Procedure Call(APC)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_cpp_apc.htm">
+    Use Asynchronous Procedure Call(APC)</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/wdm/cpp_threadcreatenotify.htm">
-    PsSetCreateThreadNotifyRoutine()</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_cpp_thread_notify.htm">
+    Register Notification for Thread Creation</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/wdm/cpp_pscreatenotify.htm">
-    PsSetCreateProcessNotifyRoutine()</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_cpp_process_notify.htm">
+    Register Notification for Process Creation</a><br>
 
 &oplus;
 <b>使用範例 - C/C++ (DriverWorks)</b><br>
