--- a/driver.htm
+++ b/driver.htm
@@ -318,16 +318,12 @@ Windows Driver Model (WDM)</h3>
     開發環境</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_ds_makefile.htm">
+    make.bat</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="driver/wdm_asm_inf.htm">
     main.inf</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="driver/wdm_ds_sources.htm">
-    sources</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="driver/wdm_cpp_makefile.htm">
-    makefile</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="driver/wdm_ds_hello.htm">
