--- a/driver.htm
+++ b/driver.htm
@@ -348,31 +348,21 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_pascal_hello.htm">
     Hello, world!</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    File<br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_pascal_file.htm">
+    Handle File IRP</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/pascal_file.htm">
-        IRP</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_pascal_file_buffer.htm">
+    Choose DO_BUFFERED_IO for File IRP</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/pascal_file-buffer.htm">
-        DO_BUFFERED_IO</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_pascal_file_direct.htm">
+    Choose DO_DIRECT_IO for File IRP</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/pascal_file-direct-pio.htm">
-        DO_DIRECT_IO(PIO)</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/pascal_file-direct-dma.htm">
-        DO_DIRECT_IO(DMA)</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/pascal_file-neither.htm">
-        DO_NEITHER_IO</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    IOCTL<br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_pascal_file_neither.htm">
+    Choose DO_NEITHER_IO for File IRP</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="driver/wdm/pascal_ioctl.htm">
