--- a/driver.htm
+++ b/driver.htm
@@ -364,21 +364,21 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_pascal_file_neither.htm">
     Choose DO_NEITHER_IO for File IRP</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/pascal_ioctl.htm">
-        IRP</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_pascal_ioctl.htm">
+    Handle IOCTL IRP</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/pascal_ioctl-buffer.htm">
-        METHOD_BUFFERED</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_pascal_ioctl_buffer.htm">
+    Choose METHOD_BUFFERED for IOCTL IRP</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/pascal_ioctl-direct-inout.htm">
-        METHOD_IN_DIRECT、METHOD_OUT_DIRECT</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_pascal_ioctl_direct.htm">
+    Choose METHOD_IN_DIRECT、METHOD_OUT_DIRECT for IOCTL IRP</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/pascal_ioctl-neither.htm">
-        METHOD_NEITHER</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_pascal_ioctl_neither.htm">
+    Choose METHOD_NEITHER for IOCTL IRP</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="driver/wdm/pascal_thread.htm">
