--- a/driver.htm
+++ b/driver.htm
@@ -380,55 +380,49 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_pascal_ioctl_neither.htm">
     Choose METHOD_NEITHER for IOCTL IRP</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/wdm/pascal_thread.htm">
-    Thread</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_pascal_thread.htm">
+    Use Thread</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    Timer<br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_pascal_timer_io.htm">
+    Use I/O Timer</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/pascal_timer-io.htm">
-        I/O</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_pascal_timer_dpc.htm">
+    Use DPC Timer</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/pascal_timer-dpc.htm">
-        DPC</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_pascal_startio.htm">
+    Handle StartIo IRP</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/wdm/pascal_startio.htm">
-    StartIO</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/wdm/pascal_queue_irp.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_pascal_queue_irp.htm">
     Queue IRP</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/wdm/pascal_cancel_irp.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_pascal_cancel_irp.htm">
     Cancel IRP</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="driver/wdm/pascal_csq.htm">
     Cancel-Safe IRP Queue(CSQ)</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    Synchronization<br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_pascal_spinlock.htm">
+    Use Spin Lock</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/pascal_spinlock.htm">
-        Spin Lock</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_pascal_event.htm">
+    Use Event</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/pascal_event.htm">
-        Event</a><br>
+    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="driver/wdm/pascal_mutex.htm">
+    Mutex</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/pascal_mutex.htm">
-        Mutex</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/pascal_semaphore.htm">
-        Semaphore</a><br>
+    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+    <a href="driver/wdm/pascal_semaphore.htm">
+    Semaphore</a><br>
 
 &lowast;
 <a href="driver/wdm/windbg_symbol.htm">
