--- a/driver/wdm_pascal_makefile.htm
+++ b/driver/wdm_pascal_makefile.htm
@@ -11,6 +11,16 @@ del /s /q main.obj
 "c:\dddk\bin\dcc32.exe" -U"c:\dddk\inc" -B -CG -JP -$A-,C-,D-,G-,H-,I-,L-,P-,V-,W+,Y- main.pas
 "c:\dddk\bin\omf2d.exe" main.obj
 "c:\dddk\bin\omf2d.exe" "c:\dddk\inc\dddk.obj"
+"c:\dddk\bin\omf2d.exe" "c:\dddk\inc\dddk.obj" /U- /CEKeAcquireSpinLock=_KeAcquireSpinLock@8
+"c:\dddk\bin\omf2d.exe" "c:\dddk\inc\dddk.obj" /U- /CEKeReleaseSpinLock=_KeReleaseSpinLock@8
+"c:\dddk\bin\omf2d.exe" "c:\dddk\inc\dddk.obj" /U- /CEKeReleaseSemaphore=_KeReleaseSemaphore@16
+"c:\dddk\bin\omf2d.exe" "c:\dddk\inc\dddk.obj" /U- /CEKefReleaseSpinLockFromDpcLevel=_KefReleaseSpinLockFromDpcLevel@4
+"c:\dddk\bin\omf2d.exe" "c:\dddk\inc\dddk.obj" /U- /CEKeSetEvent=_KeSetEvent@12
+"c:\dddk\bin\omf2d.exe" "c:\dddk\inc\dddk.obj" /U- /CEKeReadStateSemaphore=_KeReadStateSemaphore@4
+"c:\dddk\bin\omf2d.exe" "c:\dddk\inc\dddk.obj" /U- /CEKeInitializeSemaphore=_KeInitializeSemaphore@12
+"c:\dddk\bin\omf2d.exe" "c:\dddk\inc\dddk.obj" /U- /CEKiAcquireSpinLock=_KiAcquireSpinLock@4
+"c:\dddk\bin\omf2d.exe" "c:\dddk\inc\dddk.obj" /U- /CEKiReleaseSpinLock=_KiReleaseSpinLock@4
+"c:\dddk\bin\omf2d.exe" "c:\dddk\inc\dddk.obj" /U- /CEKeInitializeEvent=_KeInitializeEvent@12
 "c:\dddk\bin\omf2d.exe" "c:\dddk\inc\dddk.obj" /U- /CEZwClose=_ZwClose@4
 "c:\dddk\bin\omf2d.exe" "c:\dddk\inc\dddk.obj" /U- /CEDbgPrint=_DbgPrint
 "c:\dddk\bin\omf2d.exe" "c:\dddk\inc\dddk.obj" /U- /CEExFreePool=_ExFreePool@4
@@ -54,7 +64,7 @@ del /s /q main.obj
 "c:\dddk\bin\omf2d.exe" "c:\dddk\inc\dddk.obj" /U- /CEObReferenceObjectByHandle=_ObReferenceObjectByHandle@24
 "c:\dddk\bin\omf2d.exe" "c:\dddk\inc\dddk.obj" /U- /CEIoAttachDeviceToDeviceStack=_IoAttachDeviceToDeviceStack@8
 "c:\dddk\bin\omf2d.exe" "c:\dddk\inc\dddk.obj" /U- /CEMmMapLockedPagesSpecifyCache=_MmMapLockedPagesSpecifyCache@24
-"c:\dddk\bin\link.exe" /nologo /align:32 /base:0x10000 /subsystem:native /driver /force:unresolved /force:multiple /entry:DriverEntry "c:\dddk\inc\dddk.obj" "c:\dddk\lib\ntoskrnl.lib" main.obj /out:main.sys
+"c:\dddk\bin\link.exe" /nologo /align:32 /base:0x10000 /subsystem:native /debug /debugtype:cv /pdb:main.pdb /driver /force:unresolved /force:multiple /entry:DriverEntry "c:\dddk\inc\dddk.obj" "c:\dddk\lib\ntoskrnl.lib" "c:\dddk\lib\hal.lib" main.obj /out:main.sys
 
 if exist app.pas (
     del /s /q app.exe
