QEMU How to setup host-only network.

--- a/system.htm
+++ b/system.htm
@@ -222,6 +222,10 @@ shell script "$、{}、%、#"用途</a><br>
     安裝Windows 98</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="system/debian_qemu_hostonly.htm">
+    如何設定Host-only網卡</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="system/debian_qemu_mount.htm">
     如何掛載Local Directory</a><br>
 
