AutoSD How to prepare the environment for x86 image.

--- a/system.htm
+++ b/system.htm
@@ -642,6 +642,10 @@ Automotive Stream Distribution (AutoSD)</h3>
 <hr size="1"><br><br><br><br><br>
 
 &dash;
+<a href="system/autosd_setup_qemu_x64.htm">
+安裝系統(QEMU x64)</a><br>
+
+&dash;
 <a href="system/autosd_setup_qemu_aarch64.htm">
 安裝系統(QEMU aarch64)</a><br>
 <br><br><br><br>
