--- a/driver.htm
+++ b/driver.htm
@@ -404,9 +404,9 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_pascal_cancel_irp.htm">
     Cancel IRP</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/wdm/pascal_csq.htm">
-    Cancel-Safe IRP Queue(CSQ)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_pascal_csq.htm">
+    Use Cancel-Safe IRP Queue(CSQ)</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="driver/wdm_pascal_spinlock.htm">
@@ -416,13 +416,13 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_pascal_event.htm">
     Use Event</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/wdm/pascal_mutex.htm">
-    Mutex</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_pascal_mutex.htm">
+    Use Mutex</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/wdm/pascal_semaphore.htm">
-    Semaphore</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_pascal_semaphore.htm">
+    Use Semaphore</a><br>
 
 &lowast;
 <a href="driver/wdm/windbg_symbol.htm">
