--- a/driver.htm
+++ b/driver.htm
@@ -495,22 +495,61 @@ Windows NT Driver (Legacy)</h3>
 <hr size="1"><br><br><br><br><br>
 
 &oplus;
-<b>Assembly</b><br>
+<b>教學說明</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_driverentry.htm">
+    1. 驅動程式進入點DriverEntry()</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_adddevice.htm">
+    2. 系統透過呼叫AddDevice()來新增裝置</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_driverunload.htm">
+    3. 系統透過呼叫DriverUnload()來卸載驅動程式</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_file.htm">
+    4. User Application透過File跟驅動程式溝通</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_file_buffer.htm">
+    5. File Buffer的使用策略</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_ioctl.htm">
+    6. User Application透過IOCTL跟驅動程式溝通</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_ioctl_buffer.htm">
+    7. IOCTL Buffer的使用策略</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_queue_irp.htm">
+    8. Queue Irp的操作步驟</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_cancel_irp.htm">
+    9. Cancel Irp的操作步驟</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_sync.htm">
+    10. 同步化物件的使用說明</a><br>
+
+&oplus;
+<b>使用範例 - Assembly (MASM32)</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="driver/wdm_asm_setup.htm">
     開發環境</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/legacy/asm_driverentry.htm">
-    DriverEntry()</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_asm_makefile.htm">
+    make.bat</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/legacy/asm_driverunload.htm">
-    DriverUnload()</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/legacy/asm_hello.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/nt_asm_hello.htm">
     Hello, world!</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&oplus;
