--- a/driver.htm
+++ b/driver.htm
@@ -1454,22 +1454,118 @@ MS-DOS Device Driver (MDD)</h3>
 <hr size="1"><br><br><br><br><br>
 
 &oplus;
-Assembly<br>
+<b>教學說明</b><br>
 
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    Basic<br>
+        &emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/mdd_head.htm">
+        1. 檔頭資訊</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/mdd/asm_setup.htm">
-        開發環境</a><br>
+        &emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/mdd_irp.htm">
+        2. I/O Request Packet(IRP)</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/mdd/asm_basic.htm">
-        基本觀念</a><br>
+        &emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/mdd_flows.htm">
+        3. Command處理流程</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/mdd/asm_irp.htm">
-        I/O Request Packet(IRP)</a><br>
+        &emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/mdd_cmd.htm">
+        4. 支援的Command</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/mdd_status.htm">
+        5. Status屬性</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/mdd_cmd0.htm">
+        6. Command 0 - Initialization</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/mdd_cmd1.htm">
+        7. Command 1 - Media Check</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/mdd_cmd2.htm">
+        8. Command 2 - Get BPB Parameter</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/mdd_cmd3.htm">
+        9. Command 3 - IOCTL Input</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/mdd_cmd4.htm">
+        10. Command 4 - Input</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/mdd_cmd5.htm">
+        11. Command 5 - Nondestructive Input</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/mdd_cmd6.htm">
+        12. Command 6 - Input Status</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/mdd_cmd7.htm">
+        13. Command 7 - Input Flush</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/mdd_cmd8.htm">
+        14. Command 8 - Output</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/mdd_cmd9.htm">
+        15. Command 9 - Output with Verify</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/mdd_cmd10.htm">
+        16. Command 10 - Output Status</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/mdd_cmd11.htm">
+        17. Command 11 - Output Flush</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/mdd_cmd12.htm">
+        18. Command 12 - IOCTL Output</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/mdd_cmd13.htm">
+        19. Command 13 - Open</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/mdd_cmd14.htm">
+        20. Command 14 - Close</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/mdd_cmd15.htm">
+        21. Command 15 - Removable Media</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/mdd_cmd16.htm">
+        22. Command 16 - Output til Busy</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/mdd_cmd19.htm">
+        23. Command 19 - Generic IOCTL</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/mdd_cmd23.htm">
+        24. Command 23 - Get Logical Device</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/mdd_cmd24.htm">
+        25. Command 24 - Set Logical Device</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="driver/mdd_cmd25.htm">
+        26. Command 25 - IOCTL Query</a><br>
+
+&oplus;
+<b>使用範例 - Assembly (MASM)</b><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/mdd_asm_setup.htm">
+    開發環境</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&oplus;
     Advanced<br>
