--- a/driver.htm
+++ b/driver.htm
@@ -1567,22 +1567,9 @@ MS-DOS Device Driver (MDD)</h3>
     <a href="driver/mdd_asm_setup.htm">
     開發環境</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    Advanced<br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&oplus;
-        Char<br>
-
-            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&oplus;
-            <a href="driver/mdd/char/asm_hello.htm">
-            Hello, world!</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&oplus;
-        Block<br>
-        
-                &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-                <a href="driver/mdd/block/asm_hello.htm">
-                Hello, world!</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/mdd_asm_hello.htm">
+    Hello, world!</a><br>
 <br><br><br><br>
 
 <div id="vxworks"></div>
