Qemu How to take snapshot and load snapshot.

--- a/system.htm
+++ b/system.htm
@@ -226,6 +226,10 @@ shell script "$、{}、%、#"用途</a><br>
     如何設定Host-only網卡</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="system/debian_qemu_snapshot.htm">
+    如何儲存、載入Snapshot</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="system/debian_qemu_mount.htm">
     如何掛載Local Directory</a><br>
 
