--- a/phone/n900_maemo_vimrc.htm
+++ b/phone/n900_maemo_vimrc.htm
@@ -22,6 +22,8 @@ set backspace=indent,eol,start
 set enc=utf8
 set fencs=utf8,gbk,gb2312,gb18030
 set fileencodings=utf-8,gb2312,gb18030,gbk,ucs-bom,cp936,latin1
+autocmd BufEnter *.inc :setlocal filetype=objasm
+autocmd BufEnter *.asm :setlocal filetype=objasm
 syntax on
 
 map 0 :s/&amp;amp;/\&amp;/ge\|:'&lt;,'&gt;s/&amp;gt;/&gt;/ge\|:'&lt;,'&gt;s/&amp;lt;/&lt;/ge
