--- a/driver.htm
+++ b/driver.htm
@@ -97,6 +97,10 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_objasm_hello.htm">
     Hello, world!</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_objasm_file.htm">
+    Handle File IRP</a><br>
+
 &oplus;
 <b>使用範例 - Assembly (MASM32)</b><br>
 
