--- a/driver/wdm_objasm_makefile.htm
+++ b/driver/wdm_objasm_makefile.htm
@@ -9,6 +9,12 @@ del main.sys
 
 "c:\objasm\build\tools\assembler\uasm32.exe" /coff /c -q /less /nomlib /FwNUL /Zi /Zd main.asm
 "c:\masm32\bin\link.exe" main.obj /driver /base:0x10000 /debug /debugtype:cv /pdb:main.pdb /subsystem:native /entry:DriverEntry "c:\masm32\lib\wxp\i386\ntoskrnl.lib" /out:main.sys
+
+if exist app.asm (
+    del app.exe
+    "c:\masm32\bin\ml.exe" /c /coff /Cp /Zi /Zd app.asm
+    "c:\masm32\bin\link.exe" /subsystem:console /debug /debugtype:cv /pdb:app.pdb /version:4.0 /incremental:no /out:app.exe app.obj
+)
 </pre>
 
 <br><script type="text/javascript" src="../tail.js"></script>
